# see https://github.com/hhatto/autopep8
#     https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
#     https://peps.python.org/pep-0008/

[tool.autopep8]
max_line_length = 300
ignore = ["E401"] # allow multiple imports on one line

# added by ChatGPT to make the project installable and usable as a package

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rboman-progs"
version = "0.1.0"
description = "Personal command-line tools and scripts"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "distro",
    "chardet",
]

[tool.setuptools]
packages = ["pytools", "progs_cli"]

[project.scripts]
rb-updateoffi = "progs_cli.updateoffi:main"
rb-bck-git = "progs_cli.bck_git:main"
rb-compile-lagamine = "progs_cli.compile_lagamine:main"
rb-menus = "progs_cli.menus:main"
rb-avi2mp4 = "progs_cli.avi2mp4:main"
rb-calc = "progs_cli.calc:main"
rb-cam2mp4 = "progs_cli.cam2mp4:main"
rb-check_env = "progs_cli.check_env:main"
rb-bck_rsync = "progs_cli.bck_rsync:main"
rb-convert_encoding2utf8 = "progs_cli.convert_encoding2utf8:main"
rb-cp_dox = "progs_cli.cp_dox:main"
rb-convert_code2pdf = "progs_cli.convert_code2pdf:main"
rb-flac2mp3 = "progs_cli.flac2mp3:main"
rb_pdfmerge = "progs_cli.pdfmerge:main"
rb-pdf4x4split = "progs_cli.pdf4x4split:main"
rb-mkhandout = "progs_cli.mkhandout:main"
rb-rename_whatsapp_imgs = "progs_cli.rename_whatsapp_imgs:main"
rb-starttime = "progs_cli.starttime:main"
rb-upgrade_fortran = "progs_cli.upgrade_fortran:main"

# To install the package in editable mode (for development), run:
#   pipx uninstall rboman-progs ; pipx install -e .
