cmake_minimum_required(VERSION 2.6)

project(TBBcode CXX)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

FIND_PACKAGE(TBB REQUIRED)
LINK_DIRECTORIES(${TBB_LIB_PATH} ${TBB_LIB_PATH_DEBUG}) # pas besoin sous linux si LIBRARY_PATH est defini
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DTBB_USE_THREADING_TOOLS=1 -DTBB_USE_DEBUG=1")
INCLUDE_DIRECTORIES( ${TBB_INCLUDE_DIRS} )

# program

FILE(GLOB SRCS *.h *.cpp *.inl *.hpp)
add_executable(tbbcode ${SRCS})
TARGET_LINK_LIBRARIES(tbbcode ${TBB_LIBRARIES})
