[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rb-ffmpeg"
version = "0.1.0"
description = "Small GUI wrapper around ffmpeg"
requires-python = ">=3.10"
dependencies = [
    "PyQt5",
]

[tool.setuptools]
packages = ["rb_ffmpeg"]

[tool.setuptools.package-data]
rb_ffmpeg = ["*.ui"]

[project.scripts]
rb-ffmpeg = "rb_ffmpeg.ffmpeg_GUI:main"