CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(LBM CXX)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(CMAKE_CXX_COMPILER_ID MATCHES MSVC)
    #ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_WARNINGS)
    ADD_DEFINITIONS(-D_USE_MATH_DEFINES) # for M_PI
ENDIF()


# find Eigen
FIND_PATH(EIGEN_INCLUDE_DIRS "Eigen/Dense" PATHS "${PROJECT_SOURCE_DIR}/externals/eigen" REQUIRED)
MESSAGE(STATUS "EIGEN_INCLUDE_DIRS=" ${EIGEN_INCLUDE_DIRS})

# find PGE
FIND_PATH(OLC_INCLUDE_DIRS "olcPixelGameEngine.h" PATHS "${PROJECT_SOURCE_DIR}/externals/olcPixelGameEngine" REQUIRED)
MESSAGE(STATUS "OLC_INCLUDE_DIRS=${OLC_INCLUDE_DIRS}")

# executable
SET(SRCS main.cpp pgengine.cpp lbm.cpp pgwindow.cpp)
ADD_EXECUTABLE(lbm ${SRCS})
TARGET_INCLUDE_DIRECTORIES(lbm PUBLIC ${EIGEN_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(lbm PUBLIC ${OLC_INCLUDE_DIRS})
