# tests bidons de de cmake
# http://www.cmake.org/cmake/help/v2.8.10/cmake.html
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
MESSAGE(STATUS "hello")

PROJECT(Hello)

SET(HELLO_SRCS main.cpp)

ADD_EXECUTABLE(Hello ${HELLO_SRCS})

GET_SOURCE_FILE_PROPERTY(MYPRP main.cpp LOCATION)
MESSAGE(STATUS "MYPRP=" ${MYPRP})


SET(MKL_LIB_PATH_DESC "directory containing mkl*.lib")
SET(MKL_LIB_PATH_MESG "Set the MKL_LIB_PATH cmake cache entry to the ${MKL_LIB_PATH_DESC}")
FIND_PATH(MKL_LIB_PATH 
             NAMES mkl_dll.lib mkl_core
             DOC "The ${MKL_LIB_PATH_MESG}"
            )
IF(NOT MKL_LIB_PATH)
    MESSAGE(FATAL_ERROR ${MKL_LIB_PATH_MESG})
ENDIF()





# SET(MKL_LIB_PATH "C:\\Program Files (x86)\\Intel\\ComposerXE-2011\\mkl\\lib\\intel64")
# 
# FIND_LIBRARY(MKL_SOLVER_LIBRARY
# NAMES mkl_solver_lp64
# PATHS ${MKL_LIB_PATH}
# )
# MESSAGE(STATUS "MKL_SOLVER_LIBRARY=" ${MKL_SOLVER_LIBRARY})
# 
# FIND_LIBRARY(MKL_CORE_LIBRARY
# NAMES mkl_core
# PATHS ${MKL_LIB_PATH}
# )
# MESSAGE(STATUS "MKL_CORE_LIBRARY=" ${MKL_CORE_LIBRARY})
# 
# IF(MKL_CORE_LIBRARY)
#    TARGET_LINK_LIBRARIES (Hello ${MKL_SOLVER_LIBRARY} ${MKL_CORE_LIBRARY})
# ENDIF()


