CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
IF(POLICY CMP0053)
  CMAKE_POLICY(SET CMP0053 NEW)
ENDIF()

PROJECT(QtImageViewer)

FIND_PACKAGE(VTK COMPONENTS vtkGUISupportQt )
INCLUDE(${VTK_USE_FILE})
FIND_PACKAGE(Qt5Core REQUIRED QUIET)
FIND_LIBRARY( LIB_COCOA cocoa )

SET(SRCS main.cxx)
IF(APPLE)
    LIST(APPEND SRCS osxHelper.mm)
ENDIF()

ADD_EXECUTABLE(qtimageviewer ${SRCS})
qt5_use_modules(qtimageviewer Core Gui Widgets)
TARGET_LINK_LIBRARIES(qtimageviewer ${VTK_LIBRARIES})
