CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(TREE Fortran)

#SET(CMAKE_VERBOSE_MAKEFILE TRUE) # affiche les lignes de commande

# configure Fortran compiler
GET_FILENAME_COMPONENT(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
MESSAGE(STATUS "Fortran_COMPILER_NAME        : " ${Fortran_COMPILER_NAME})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS          : " ${CMAKE_Fortran_FLAGS})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS_RELEASE  : " ${CMAKE_Fortran_FLAGS_RELEASE})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS_DEBUG    : " ${CMAKE_Fortran_FLAGS_DEBUG})

ADD_EXECUTABLE(tree tree.for)
ADD_EXECUTABLE(tree2 tree2.for)

ENABLE_TESTING()
ADD_TEST(NAME tree COMMAND ${EXECUTABLE_OUTPUT_PATH}/tree
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
ADD_TEST(NAME tree2 COMMAND ${EXECUTABLE_OUTPUT_PATH}/tree2
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
         