CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(DrMetafor C)

FILE(GLOB SRCS *.h *.c)

ADD_EXECUTABLE(drmeta ${SRCS})
IF(WIN32)
    SET_TARGET_PROPERTIES(drmeta PROPERTIES DEBUG_POSTFIX "_d")
ENDIF()

ENABLE_TESTING()

FILE(GLOB TEST_SRCS test/*.*)
ADD_TEST(NAME drmeta COMMAND ${EXECUTABLE_OUTPUT_PATH}/drmeta ${TEST_SRCS}
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})

